Update of Epic patch
This patch makes the Epic backend work with latest version of Epic. 

* Added smashing, which makes function that returns _\==_ be constant functions
  returing just refl.

* Adds injection detection, which detects functions which will be inefficient 
  identity functions in the compiled code, and makes them efficient.

* STATIC pragma
  In the Epic backend, functions marked with the STATIC pragma will be normalised before compilation.
  Example usage:
  {-# STATIC power #-}
  An occurence of power 4 x will be rolled out to be x * x * x * x.

Due to problems with darcs taking massive amounts of time with our patches, this
massive patch was created.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -82,7 +82,7 @@ library
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
   if flag(epic)
-    build-depends:  epic >= 0.1.7 && < 0.2
+    build-depends:  epic >= 0.1.13 && < 0.2
   build-depends:    mtl == 2.0.*,
                     QuickCheck >= 2.3 && < 2.5,
                     haskell-src-exts >= 1.9.6 && < 1.12,
@@ -110,16 +110,20 @@ library
                     Agda.Interaction.GhciTop
                     Agda.Compiler.HaskellTypes
                     Agda.Compiler.Epic.AuxAST
+                    Agda.Compiler.Epic.CaseOpts
                     Agda.Compiler.Epic.Compiler
                     Agda.Compiler.Epic.CompileState
-                    Agda.Compiler.Epic.ConstructorIrrelevancy
+                    Agda.Compiler.Epic.ForceConstrs
                     Agda.Compiler.Epic.Erasure
                     Agda.Compiler.Epic.Epic
                     Agda.Compiler.Epic.Forcing
                     Agda.Compiler.Epic.FromAgda
-                    Agda.Compiler.Epic.LambdaLift
+                    Agda.Compiler.Epic.Injection
+                    Agda.Compiler.Epic.Interface
                     Agda.Compiler.Epic.NatDetection
                     Agda.Compiler.Epic.Primitive
+                    Agda.Compiler.Epic.Smashing
+                    Agda.Compiler.Epic.Static
                     Agda.Compiler.JS.Case
                     Agda.Compiler.JS.Compiler
                     Agda.Compiler.JS.Syntax
