--- a/.darcsignore
+++ b/.darcsignore
@@ -58,6 +58,7 @@ examples/simple-lib/.*\.hs
 examples/MAlonzo/MAlonzo$
 examples/MAlonzo/main$
 test/fail/MAlonzo$
+test/epic/(RunTests|Epic)$
 test/compiler/(Main|MAlonzo)$
 ^src/agda-pkg/dist$
 src/prototyping/terms/(dist|term)$
