updated version to 2.3.0

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.2.11
+version:         2.3.0
 cabal-version:   >= 1.8 && < 2
 build-type:      Simple
 license:         OtherLicense
@@ -48,6 +48,11 @@ data-files:         Agda.css
 source-repository head
   type:     darcs
   location: http://code.haskell.org/Agda/
+
+source-repository this
+  type:     darcs
+  location: http://code.haskell.org/Agda/
+  tag:      2.3.0
 
 flag use-locale
   description:
