--- a/Agda.cabal
+++ b/Agda.cabal
@@ -64,7 +64,7 @@ flag epic
 library
   hs-source-dirs:   src/full
   if flag(use-locale)
-    build-depends:  base >= 4.2 && < 4.5
+    build-depends:  base >= 4.2 && < 4.6
   else
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
@@ -76,12 +76,12 @@ library
                     containers >= 0.1 && < 0.5,
                     pretty >= 1.0 && < 1.2,
                     directory >= 1.0 && < 1.2,
-                    old-time == 1.0.*,
+                    old-time >= 1.0 && < 1.2,
                     bytestring >= 0.9.0.1 && < 0.10,
-                    array >= 0.1 && < 0.4,
+                    array >= 0.1 && < 0.5,
                     binary >= 0.4.4 && < 0.6,
                     zlib >= 0.4.0.1 && < 0.6,
-                    filepath >= 1.1 && < 1.3,
+                    filepath >= 1.1 && < 1.4,
                     process >= 1.0.1.0 && < 1.2,
                     haskeline >= 0.6.3.2 && < 0.7,
                     xhtml == 3000.2.*,
@@ -329,10 +329,10 @@ executable agda-mode
   main-is:          Main.hs
   other-modules:    Paths_Agda
   if flag(use-locale)
-    build-depends:  base >= 4.2 && < 4.5
+    build-depends:  base >= 4.2 && < 4.6
   else
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
-  build-depends:    filepath >= 1.1 && < 1.3,
+  build-depends:    filepath >= 1.1 && < 1.4,
                     process >= 1.0.1.0 && < 1.2,
                     directory >= 1.0 && < 1.2
