--- a/Agda.cabal
+++ b/Agda.cabal
@@ -95,6 +95,7 @@ library
                     Agda.ImpossibleTest
                     Agda.Interaction.BasicOps
                     Agda.Interaction.GhciTop
+                    Agda.Compiler.CallCompiler
                     Agda.Compiler.HaskellTypes
                     Agda.Compiler.Epic.AuxAST
                     Agda.Compiler.Epic.CaseOpts
