Updated a test case.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -153,7 +153,7 @@ relocatable-interfaces : relocatable/originals/*.agda
 	@$(agda) -irelocatable/copies relocatable/copies/C.agda > relocatable/copies/output
 	@cat relocatable/copies/output
         # ...and skips one of the modules (A).
-	@[ `grep ^Skipping relocatable/copies/output | wc -l` = 1 ]
+	@[ `grep "^ *Skipping" relocatable/copies/output | wc -l` = 1 ]
 	@rm -rf relocatable/copies
 
 malformed-interfaces : malformed/Empty.agda
