--- a/Agda.cabal
+++ b/Agda.cabal
@@ -88,6 +88,9 @@ library
                     hashable == 1.1.*,
                     hashtables == 1.0.*,
                     syb >= 0.1 && < 0.4
+  if os(linux) || os(darwin) || os(freebsd)
+    build-depends:  unix >= 2 && < 2.6,
+                    cautious-file >= 0.1.3 && < 1.1
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.3.1 && < 3.1
   extensions:       CPP
