Various changes related to interactive highlighting. + This feature is not quite ready for deployment yet.

--- a/test/interaction/Long.in
+++ b/test/interaction/Long.in
@@ -1,6 +1,6 @@
-top_command (cmd_write_highlighting_info currentFile "./highlighting.tmp")
+top_command (cmd_write_highlighting_info currentFile)
 top_command (cmd_load currentFile [])
-top_command (cmd_write_highlighting_info currentFile "./highlighting.tmp")
+top_command (cmd_write_highlighting_info currentFile)
 top_command (cmd_compile MAlonzo currentFile [])
 top_command cmd_constraints
 top_command (cmd_load currentFile [])
