Main refactoring of GhciTop.hs
Changes:

- Use the global state 'theState' as less as possible.
- Add a callback functions which is called 
  instead of sending the interactive output to stdout.
  In this way the output sending can be much cheaper if the
  Agda libraries are statically linked to an application.
- Emit the interactive output as ADT values instead of
  an elisp string.
  This helps to port Agda interaction to other editors.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -139,6 +139,7 @@ library
                     Agda.Interaction.Highlighting.Range
                     Agda.Interaction.Highlighting.Vim
                     Agda.Interaction.Imports
+                    Agda.Interaction.Response
                     Agda.Interaction.MakeCase
                     Agda.Interaction.Monad
                     Agda.Interaction.Options
