--- a/Agda.cabal
+++ b/Agda.cabal
@@ -87,7 +87,8 @@ library
                     xhtml == 3000.2.*,
                     hashable >= 1.1.2.3 && < 1.2,
                     hashtables == 1.0.*,
-                    syb >= 0.1 && < 0.4
+                    syb >= 0.1 && < 0.4,
+                    deepseq == 1.3.*
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.3.1 && < 3.1
   extensions:       CPP
