Interaction test cases must now reside in test/interaction. + Not in its subdirectories.

--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -13,7 +13,7 @@ else
 pwd=$(shell pwd)/
 endif
 
-AgdaFiles=$(shell find . -name '*.agda' -o -name '*.lagda')
+AgdaFiles=$(shell ls *agda)
 OutFiles=$(patsubst %.lagda,%.out,$(patsubst %.agda,%.out,$(AgdaFiles)))
 Tests=$(patsubst %.lagda,%.cmp,$(patsubst %.agda,%.cmp,$(AgdaFiles)))
 
