Fixed issue 591. + I think that Agda's handling of options is too complicated. This fix   makes it even more complicated.

--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -27,6 +27,7 @@ run_test=( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
 				 | cat - $*.in | ghc --interactive -v0 \
 				 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'
 
+setup_Issue591   = rm -f Issue591/M.agdai
 cleanup_Issue373 = rm -rf Issue373 MAlonzo
 
 # No recorded output
