Fixed a syntax error...

--- a/src/prototyping/mixfix/benchmarks/mixfix-benchmarks.cabal
+++ b/src/prototyping/mixfix/benchmarks/mixfix-benchmarks.cabal
@@ -13,4 +13,4 @@ executable mixfix-benchmarks
                     fgl == 5.4.*,
                     containers == 0.4.*,
                     ghc-prim == 0.2.*,
-                    incremental-parser == 0.2.*,
+                    incremental-parser == 0.2.*
