Refine, emacs: C-u C-c C-r will insert a pattern matching lambda instead of a standard lambda.

--- a/test/interaction/Long.in
+++ b/test/interaction/Long.in
@@ -9,8 +9,8 @@ top_command cmd_constraints
 top_command cmd_metas
 -- Note that cmd_make_case does not update the set of goals.
 goal_command 0 cmd_make_case "n"
-goal_command 0 cmd_refine_or_intro "Just"
-goal_command 7 cmd_refine_or_intro ""
+goal_command 0 (cmd_refine_or_intro False) "Just"
+goal_command 7 (cmd_refine_or_intro False) ""
 goal_command 4 cmd_auto ""
 goal_command 3 (cmd_infer Instantiated) "D"
 goal_command 7 (cmd_context Normalised) ""
@@ -18,7 +18,7 @@ goal_command 7 (cmd_goal_type Normalised) ""
 goal_command 7 (cmd_goal_type_context Normalised) ""
 goal_command 7 (cmd_goal_type_context_infer Normalised) "n"
 goal_command 3 cmd_show_module_contents "D"
-goal_command 3 cmd_intro ""
+goal_command 3 (cmd_intro False) ""
 goal_command 6 cmd_refine "Just"
 goal_command 8 (cmd_compute False) "s′ z"
 goal_command 8 (cmd_compute True) "s′ z"
