patch-for-issue-600

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -70,6 +70,10 @@ library
                     utf8-string == 0.3.*
   if flag(epic)
     build-depends:  epic >= 0.1.13 && < 0.10
+
+  if os(windows)
+    build-depends:  Win32
+
   build-depends:    mtl == 2.0.*,
                     QuickCheck >= 2.3 && < 2.5,
                     haskell-src-exts >= 1.9.6 && < 1.14,
