A translation of copatterns into nested record expressions. This translation handles only the simplest cases of copattern lhs yet. No with, rewrite, where, absurd clauses.
  fst f = e1
  snd f = e2

is rewritten to

  f = record { fst = e1; snd = e2 }

Deep destructor patterns are supported.
See test/succeed/Copatterns.agda for a simple example.
The highlighting does not fully work yet, maybe some corrupt range info!?

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -149,6 +149,7 @@ library
                     Agda.Interaction.MakeCase
                     Agda.Interaction.Monad
                     Agda.Interaction.Options
+                    Agda.Syntax.Abstract.Copatterns
                     Agda.Syntax.Abstract.Name
                     Agda.Syntax.Abstract.Pretty
                     Agda.Syntax.Abstract.Views
