--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -21,17 +21,22 @@ default : $(Tests)
 
 export TMPDIR=highlighting.tmp
 
-run_test=( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
+run_test=if test -f $*.in; \
+    then ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps' ) \
+				 | cat - $*.in | agdaghci --currentfile "$(wildcard $*.agda $*.lagda)" \
+				 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
+    else ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
 					 echo 'let currentFile = "$(wildcard $*.agda $*.lagda)"'; \
 					 echo "let top_command = top_command' currentFile" ) \
-				 | cat - $*.in | ghc --interactive -v0 \
-				 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'
+				 | cat - $*.in_ghci | ghc --interactive -v0 \
+				 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
+    fi
 
 setup_Issue591   = rm -f Issue591/M.agdai
 cleanup_Issue373 = rm -rf Issue373 MAlonzo
 
 # No recorded output
-$(OutFiles) : %.out : $(wildcard %.agda %.lagda) %.in
+$(OutFiles) : %.out : $(wildcard %.agda %.lagda) $(wildcard %.in %.in_ghci)
 	@-mkdir $(TMPDIR)
 	@$(setup_$*)
 	@rm -f "$(@:.out=.agdai)"
