--- a/Agda.cabal
+++ b/Agda.cabal
@@ -90,6 +90,7 @@ library
                     xhtml == 3000.2.*,
                     hashable >= 1.1.2.3 && < 1.2,
                     hashtables == 1.0.*,
+                    geniplate == 0.6.*,
                     syb >= 0.1 && < 0.4,
                     deepseq == 1.3.*
   build-tools:      happy >= 1.15 && < 2,
@@ -279,6 +280,7 @@ library
                     Agda.Utils.Fresh
                     Agda.Utils.Function
                     Agda.Utils.Generics
+                    Agda.Utils.Geniplate
                     Agda.Utils.Graph
                     Agda.Utils.Hash
                     Agda.Utils.HashMap
