--- a/Agda.cabal
+++ b/Agda.cabal
@@ -165,6 +165,7 @@ library
                     Agda.Syntax.Fixity
                     Agda.Syntax.Info
                     Agda.Syntax.Internal
+                    Agda.Syntax.Internal.Generic
                     Agda.Syntax.Internal.Pattern
                     Agda.Syntax.Literal
                     Agda.Syntax.Notation
