--- a/test/lib-succeed/Makefile
+++ b/test/lib-succeed/Makefile
@@ -1,7 +1,9 @@
+
 # Agda 2
 # Makefile for successful tests depending on the standard library
 # Author: Andreas Abel, Ulf Norell
 # Created: 2012-02-24 (from test/succeed/Makefile)
+SHELL=bash
 
 TOP=../..
 
