Various changes related to interactive highlighting.

--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -32,8 +32,9 @@ run_test=if test -f $*.in; \
 				 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
     fi
 
-setup_Issue591   = rm -f Issue591/M.agdai
-cleanup_Issue373 = rm -rf Issue373 MAlonzo
+setup_Issue591     = rm -f Issue591/M.agdai
+setup_Highlighting = rm -f Highlighting/M.agdai
+cleanup_Issue373   = rm -rf Issue373 MAlonzo
 
 # No recorded output
 $(OutFiles) : %.out : $(wildcard %.agda %.lagda) $(wildcard %.in %.in_ghci)
