Support for mtl 2.1 and containers 0.5.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -62,10 +62,10 @@ library
     build-depends:  Win32 == 2.2.*
 
   build-depends:    base >= 4.2 && < 4.6,
-                    mtl == 2.0.*,
+                    mtl >= 2.0 && < 2.2,
                     QuickCheck >= 2.3 && < 2.5,
                     haskell-src-exts >= 1.9.6 && < 1.14,
-                    containers >= 0.1 && < 0.5,
+                    containers >= 0.1 && < 0.6,
                     unordered-containers == 0.2.*,
                     pretty >= 1.0 && < 1.2,
                     directory >= 1.0 && < 1.2,
