--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -3,7 +3,7 @@ TOP = ../..
 include $(TOP)/mk/paths.mk
 include $(TOP)/mk/config.mk
 
-# Enable read -n
+# Enable read -n and |&.
 SHELL=bash
 
 uname:=$(shell uname)
@@ -25,12 +25,12 @@ run_test=if test -f $*.in; \
     then ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps' ) \
            | cat - $*.in \
            | agda --interaction-test "$(wildcard $*.agda $*.lagda)" $(RTS_$*) \
-           | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
+           |& sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
     else ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
            echo 'let currentFile = "$(wildcard $*.agda $*.lagda)"'; \
            echo "let top_command = top_command' currentFile" ) \
            | cat - $*.in_ghci | ghc --interactive -v0 $(RTS_$*) \
-           | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
+           |& sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
     fi
 
 setup_Issue591     = rm -f Issue591/M.agdai
