Refactoring: Merged the three parsers for pattern, lhs, and copatterns into one code. The module Syntax.Concrete.Copatterns is now obsolete and has been removed.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -149,7 +149,7 @@ library
                     Agda.Syntax.Concrete.Name
                     Agda.Syntax.Concrete.Operators.Parser
                     Agda.Syntax.Concrete.Operators
-                    Agda.Syntax.Concrete.Copatterns
+--                    Agda.Syntax.Concrete.Copatterns
                     Agda.Syntax.Concrete.Pretty
                     Agda.Syntax.Concrete
                     Agda.Syntax.Fixity
