--- a/Agda.cabal
+++ b/Agda.cabal
@@ -278,8 +278,10 @@ library
                     Agda.Utils.Map
                     Agda.Utils.Maybe
                     Agda.Utils.Monad
+                    Agda.Utils.NubList
                     Agda.Utils.Permutation
                     Agda.Utils.Pointer
+                    Agda.Utils.Pointed
                     Agda.Utils.Pretty
                     Agda.Utils.QuickCheck
                     Agda.Utils.ReadP
