--- a/Agda.cabal
+++ b/Agda.cabal
@@ -53,6 +53,11 @@ flag epic
   description:
     Install the Epic compiler.
 
+flag old-time
+  default: False
+  description:
+    Depend on old-time rather than time.
+
 library
   hs-source-dirs:   src/full
   if flag(epic)
@@ -61,16 +66,14 @@ library
   if os(windows)
     build-depends:  Win32 == 2.2.*
 
-  build-depends:    base >= 4.2 && < 4.6,
+  build-depends:    base >= 4.2 && < 4.7,
                     mtl >= 2.0 && < 2.2,
                     QuickCheck >= 2.3 && < 2.6,
                     haskell-src-exts >= 1.9.6 && < 1.14,
                     containers >= 0.1 && < 0.6,
                     unordered-containers == 0.2.*,
                     pretty >= 1.0 && < 1.2,
-                    directory >= 1.0 && < 1.2,
-                    old-time >= 1.0 && < 1.2,
-                    bytestring >= 0.9.0.1 && < 0.10,
+                    bytestring >= 0.9.0.1 && < 0.11,
                     array >= 0.1 && < 0.5,
                     binary >= 0.4.4 && < 0.6,
                     zlib >= 0.4.0.1 && < 0.6,
@@ -82,6 +85,14 @@ library
                     hashtables == 1.0.*,
                     geniplate == 0.6.*,
                     deepseq == 1.3.*
+
+  if flag(old-time)
+    build-depends:  old-time >= 1.0 && < 1.2,
+                    directory >= 1.0 && < 1.2
+  if !flag(old-time)
+    build-depends:  time == 1.4.*,
+                    directory == 1.2.*
+
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.3.1 && < 3.1
   extensions:       CPP
@@ -289,6 +300,7 @@ library
                     Agda.Utils.String
                     Agda.Utils.Suffix
                     Agda.Utils.TestHelpers
+                    Agda.Utils.Time
                     Agda.Utils.Trie
                     Agda.Utils.Tuple
                     Agda.Utils.Unicode
@@ -345,7 +357,7 @@ executable agda-mode
   hs-source-dirs:   src/agda-mode
   main-is:          Main.hs
   other-modules:    Paths_Agda
-  build-depends:    base >= 4.2 && < 4.6,
+  build-depends:    base >= 4.2 && < 4.7,
                     filepath >= 1.1 && < 1.4,
                     process >= 1.0.1.0 && < 1.2,
-                    directory >= 1.0 && < 1.2
+                    directory >= 1.0 && < 1.3
