Disable projection-likeness for recursive functions.  Fixes issue 700. Also moved code to a separate module, TypeChecking.ProjectionLike.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -245,6 +245,7 @@ library
                     Agda.TypeChecking.Positivity
                     Agda.TypeChecking.Pretty
                     Agda.TypeChecking.Primitive
+                    Agda.TypeChecking.ProjectionLike
                     Agda.TypeChecking.Quote
                     Agda.TypeChecking.Rebind
                     Agda.TypeChecking.RecordPatterns
