--- a/test/succeed/Makefile
+++ b/test/succeed/Makefile
@@ -27,6 +27,7 @@ cleanup_Issue326							= rm -rf MAlonzo Issue326
 cleanup_Issue561							= rm -rf MAlonzo Issue561
 cleanup_UniversePolymorphicIO = rm -rf MAlonzo UniversePolymorphicIO
 cleanup_CompilingCoinduction	= rm -rf MAlonzo CompilingCoinduction
+cleanup_WErrorOverride				= rm -rf MAlonzo WErrorOverride
 
 check_CompilingCoinduction = ./checkOutput ./CompilingCoinduction a
 check_UniversePolymorphicIO = ./checkOutput ./UniversePolymorphicIO ok
