implemented sharing and call-by-need (disabled for now)   - new Term constructor: Shared (Ptr Term)   - pointers are unsafePerformIO'd (see Agda.Utils.Pointer)   - relevant functions       shared        :: Term -> Term  -- create a shared Term       ignoreSharing :: Term -> Term  -- strip away any Shared constructors       updateShared* :: (Term -> * Term) -> Term -> * Term         (for * = nothing, monad (M), or monad + functor (FM))         -- Update the term if shared. Care needed: the function must preserve         -- Agda definitional equality.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -234,6 +234,7 @@ library
                     Agda.TypeChecking.Monad.Mutual
                     Agda.TypeChecking.Monad.Open
                     Agda.TypeChecking.Monad.Options
+                    Agda.TypeChecking.Monad.Sharing
                     Agda.TypeChecking.Monad.Signature
                     Agda.TypeChecking.Monad.SizedTypes
                     Agda.TypeChecking.Monad.State
