--- a/Agda.cabal
+++ b/Agda.cabal
@@ -79,6 +79,7 @@ library
                     hashable >= 1.1.2.3 && < 1.2,
                     hashtables == 1.0.*,
                     geniplate == 0.6.*,
+                    parallel < 3.3,
                     deepseq == 1.3.*
 
   if impl(ghc < 7.6)
