Coverage checker now creates a split tree (unused yet).

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -199,6 +199,7 @@ library
                     Agda.TypeChecking.Conversion
                     Agda.TypeChecking.Coverage
                     Agda.TypeChecking.Coverage.Match
+                    Agda.TypeChecking.Coverage.SplitTree
                     Agda.TypeChecking.Datatypes
                     Agda.TypeChecking.DisplayForm
                     Agda.TypeChecking.Eliminators
