Removed the comint dependency (Emacs Mode).

--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -22,9 +22,8 @@ default : $(Tests)
 export TMPDIR=highlighting-tmp
 
 run_test=if test -f $*.in; \
-    then ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps' ) \
-           | cat - $*.in \
-           | agda --interaction-test "$(wildcard $*.agda $*.lagda)" $(RTS_$*) \
+    then cat $*.in \
+         | agda --interaction-test "$(wildcard $*.agda $*.lagda)" $(RTS_$*) \
            2>&1 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
     else ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
            echo 'let currentFile = "$(wildcard $*.agda $*.lagda)"'; \
