no need to give the filename in the command line in interaction tests

--- a/test/interaction/Makefile
+++ b/test/interaction/Makefile
@@ -26,7 +26,7 @@ run_test=if test -f $*.in; \
          | sed "s/goal_command/ioTCMgoal currentFile None/g" \
          | sed "s/top_command/ioTCM currentFile None/g" \
          | sed "s/currentFile/\"$(wildcard $*.agda $*.lagda)\"/g" \
-         | agda --interaction "$(wildcard $*.agda $*.lagda)" $(RTS_$*) \
+         | agda --interaction $(RTS_$*) \
            2>&1 | sed -e 's"$(pwd)""g' -e 's"$(TMPDIR).*$$""'; \
     else ( echo ':mod + Agda.Interaction.GhciTop Agda.Interaction.BasicOps'; \
            echo 'let currentFile = "$(wildcard $*.agda $*.lagda)"'; \
