--- a/Agda.cabal
+++ b/Agda.cabal
@@ -303,6 +303,7 @@ library
                     Agda.Utils.Trie
                     Agda.Utils.Tuple
                     Agda.Utils.Unicode
+                    Agda.Utils.Update
                     Agda.Utils.Warshall
                     Agda.Version
                     Agda.Auto.Auto
